--- a/package.json
+++ b/package.json
@@ -2,18 +2,24 @@
   "name": "rent-a-car",
   "version": "0.1.0",
   "private": true,
-  "homepage":  "https://elias-291356.github.io/rent-a-car",
+  "homepage": "https://elias-291356.github.io/rent-a-car",
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@redux-devtools/extension": "^3.2.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
+    "@reduxjs/toolkit": "^1.9.7",
+    "axios": "^1.6.1",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3",
+    "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy":"npm run build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
